--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ongea",
-    "slug": "ongea",
+    "name": "unganisha",
+    "slug": "unganisha",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
