--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.6",
     "expo": "~42.0.1",
+    "expo-image-picker": "^10.2.3",
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
+    "modal-enhanced-react-native-web": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
